--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "classnames": "2.3.1",
     "date-fns": "2.21.3",
+    "esbuild": "^0.12.25",
     "gray-matter": "4.0.3",
     "mdx-bundler": "^4.1.0",
     "next": "latest",
