--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
+    "postbuild": "node ./lib/generate-rss.mjs",
     "typecheck": "tsc"
   },
   "dependencies": {
@@ -26,8 +27,10 @@
     "@types/node": "^15.6.0",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
+    "@types/rss": "^0.0.29",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.3.0",
+    "rss": "^1.2.2",
     "tailwindcss": "^2.1.2"
   },
   "license": "MIT"
