--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "remark": "13.0.0",
-    "remark-html": "13.0.1",
+    "remark-html": "^15.0.1",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
